tests/negative/InfixError.juvix
module InfixError;

  syntax fixity add {arity: binary, assoc: none};

  syntax operator + add;
  axiom + : Type → Type → Type;

  axiom T : Type + Type + ;
end;
